adicionando melhorias de texto

--- a/index.html
+++ b/index.html
@@ -640,13 +640,45 @@
               <!-- Conteúdo -->
               <div class="scroll-element-right">
                 <div class="mb-6">
-                  <span
-                    class="inline-block px-4 py-2 bg-primary/10 text-primary rounded-full text-sm font-semibold mb-4">
-                    Odontologia do Esporte
-                  </span>
-                  <h2 class="text-3xl md:text-4xl font-bold text-primary mb-4">
+                  <!-- Badges de Especialidades -->
+                  <div class="flex flex-wrap gap-2 mb-4">
+                    <span class="inline-block px-4 py-2 bg-primary/10 text-primary rounded-full text-sm font-semibold">
+                      Odontologia do Esporte
+                    </span>
+                    <span class="inline-block px-4 py-2 bg-accent/10 text-accent rounded-full text-sm font-semibold">
+                      Periodontia
+                    </span>
+                    <span
+                      class="inline-block px-4 py-2 bg-secondary/10 text-secondary rounded-full text-sm font-semibold">
+                      Cirurgia
+                    </span>
+                    <span class="inline-block px-4 py-2 bg-primary/10 text-primary rounded-full text-sm font-semibold">
+                      Endodontia
+                    </span>
+                    <span class="inline-block px-4 py-2 bg-accent/10 text-accent rounded-full text-sm font-semibold">
+                      Odontopediatria
+                    </span>
+                    <span
+                      class="inline-block px-4 py-2 bg-secondary/10 text-secondary rounded-full text-sm font-semibold">
+                      Restauradora
+                    </span>
+                    <span class="inline-block px-4 py-2 bg-primary/10 text-primary rounded-full text-sm font-semibold">
+                      Prótese
+                    </span>
+                  </div>
+
+                  <h2 class="text-3xl md:text-4xl font-bold text-primary mb-2">
                     Conheça a Dra. Amanda Vivacqua
                   </h2>
+                  <p class="text-gray-600 text-lg mb-4">
+                    <span class="inline-flex items-center">
+                      <svg class="w-5 h-5 mr-2 text-primary" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                          d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                      </svg>
+                      CRO DF 16290
+                    </span>
+                  </p>
                 </div>
 
                 <div class="space-y-4 text-gray-700 leading-relaxed">
@@ -959,68 +991,189 @@
         <img id="gallery-modal-img" src="" alt="Gallery Image" />
       </div>
 
-      <!-- Contact Section -->
-      <section id="contact" class="py-16 sm:py-20 bg-primary text-white">
-        <div class="container mx-auto px-4 sm:px-6">
-          <div class="text-center mb-8 sm:mb-12 scroll-element">
-            <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold mb-4">
-              Entre em Contato
-            </h2>
-            <p class="text-teal-100 text-base sm:text-lg">
-              Agende sua consulta e cuide do seu sorriso
-            </p>
+      <!-- Appointment Section -->
+      <section id="agendar"
+        class="py-20 bg-gradient-to-br from-primary via-secondary to-accent text-white relative overflow-hidden">
+        <!-- Background decorative elements -->
+        <div class="absolute inset-0 opacity-10">
+          <div class="absolute top-10 right-10 w-72 h-72 bg-white rounded-full blur-3xl"></div>
+          <div class="absolute bottom-10 left-10 w-96 h-96 bg-white rounded-full blur-3xl"></div>
+        </div>
+
+        <div class="container mx-auto px-4 relative z-10">
+          <div class="max-w-4xl mx-auto">
+            <!-- Header -->
+            <div class="text-center mb-12 scroll-element">
+              <div class="inline-block mb-4">
+                <div class="bg-white/20 backdrop-blur-sm rounded-full px-6 py-2">
+                  <span class="text-sm font-semibold tracking-wide">AGENDAMENTO ONLINE</span>
+                </div>
+              </div>
+              <h2 class="text-4xl md:text-5xl font-bold mb-4">
+                Agende Sua Consulta
+              </h2>
+              <p class="text-xl text-teal-50 max-w-2xl mx-auto">
+                Escolha o melhor dia e horário para cuidar do seu sorriso.
+                Nosso sistema de agendamento é rápido, fácil e seguro!
+              </p>
+            </div>
+
+            <!-- Benefits Grid -->
+            <div class="grid md:grid-cols-3 gap-6 mb-12">
+              <div class="bg-white/10 backdrop-blur-sm rounded-xl p-6 text-center scroll-element-scale delay-100">
+                <div class="bg-white/20 w-16 h-16 rounded-full flex items-center justify-center mx-auto mb-4">
+                  <svg class="w-8 h-8 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                      d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"></path>
+                  </svg>
+                </div>
+                <h3 class="text-lg font-semibold mb-2">Horários Flexíveis</h3>
+                <p class="text-sm text-teal-50">Visualize disponibilidade em tempo real</p>
+              </div>
+
+              <div class="bg-white/10 backdrop-blur-sm rounded-xl p-6 text-center scroll-element-scale delay-200">
+                <div class="bg-white/20 w-16 h-16 rounded-full flex items-center justify-center mx-auto mb-4">
+                  <svg class="w-8 h-8 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                      d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                  </svg>
+                </div>
+                <h3 class="text-lg font-semibold mb-2">Confirmação Imediata</h3>
+                <p class="text-sm text-teal-50">Receba confirmação na hora</p>
+              </div>
+
+              <div class="bg-white/10 backdrop-blur-sm rounded-xl p-6 text-center scroll-element-scale delay-300">
+                <div class="bg-white/20 w-16 h-16 rounded-full flex items-center justify-center mx-auto mb-4">
+                  <svg class="w-8 h-8 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                      d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                  </svg>
+                </div>
+                <h3 class="text-lg font-semibold mb-2">100% Seguro</h3>
+                <p class="text-sm text-teal-50">Seus dados estão protegidos</p>
+              </div>
+            </div>
+
+            <!-- CTA Card -->
+            <div class="bg-white rounded-2xl shadow-2xl p-8 md:p-12 text-center scroll-element-scale delay-400">
+              <div class="mb-6">
+                <div
+                  class="inline-flex items-center justify-center w-20 h-20 bg-gradient-to-br from-primary to-secondary rounded-full mb-4">
+                  <svg class="w-10 h-10 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                      d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"></path>
+                  </svg>
+                </div>
+                <h3 class="text-2xl md:text-3xl font-bold text-gray-800 mb-3">
+                  Pronto para transformar seu sorriso?
+                </h3>
+                <p class="text-gray-600 text-lg mb-8">
+                  Clique no botão abaixo e escolha o melhor horário para você.
+                  É rápido, fácil e sem complicações!
+                </p>
+              </div>
+
+              <!-- Main CTA Button -->
+              <a href="https://calendar.google.com/calendar/appointments/schedules/YOUR_SCHEDULE_ID" target="_blank"
+                rel="noopener noreferrer"
+                class="inline-flex items-center justify-center bg-gradient-to-r from-primary to-secondary hover:from-secondary hover:to-primary text-white font-bold text-lg px-10 py-5 rounded-full shadow-lg hover:shadow-xl transform hover:scale-105 transition-all duration-300 group">
+                <svg class="w-6 h-6 mr-3 group-hover:rotate-12 transition-transform" fill="none" stroke="currentColor"
+                  viewBox="0 0 24 24">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                    d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"></path>
+                </svg>
+                Agendar Consulta Agora
+                <svg class="w-5 h-5 ml-3 group-hover:translate-x-1 transition-transform" fill="none"
+                  stroke="currentColor" viewBox="0 0 24 24">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
+                </svg>
+              </a>
+
+              <!-- Alternative contact -->
+              <div class="mt-8 pt-8 border-t border-gray-200">
+                <p class="text-gray-600 mb-4">Prefere agendar por telefone ou WhatsApp?</p>
+                <div class="flex flex-col sm:flex-row gap-4 justify-center">
+                  <a href="tel:+5561999999999"
+                    class="inline-flex items-center justify-center bg-gray-100 hover:bg-gray-200 text-gray-800 font-semibold px-6 py-3 rounded-full transition-all duration-300">
+                    <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z">
+                      </path>
+                    </svg>
+                    (61) 99999-9999
+                  </a>
+                  <a href="https://wa.me/5561999999999?text=Olá!%20Gostaria%20de%20agendar%20uma%20consulta"
+                    target="_blank" rel="noopener noreferrer"
+                    class="inline-flex items-center justify-center bg-green-500 hover:bg-green-600 text-white font-semibold px-6 py-3 rounded-full transition-all duration-300">
+                    <svg class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 24 24">
+                      <path
+                        d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893A11.821 11.821 0 0020.885 3.488" />
+                    </svg>
+                    WhatsApp
+                  </a>
+                </div>
+              </div>
+            </div>
+
+            <!-- Info Note -->
+            <div class="mt-8 text-center">
+              <p class="text-teal-50 text-sm">
+                <svg class="w-5 h-5 inline-block mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                    d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                </svg>
+                Respeitamos sua privacidade. Suas informações são confidenciais e protegidas.
+              </p>
+            </div>
           </div>
+        </div>
+      </section>
 
-          <div class="grid sm:grid-cols-2 md:grid-cols-3 gap-6 sm:gap-8 max-w-4xl mx-auto">
-            <div class="text-center scroll-element-scale delay-100">
-              <div class="bg-white/10 w-16 h-16 rounded-full flex items-center justify-center mx-auto mb-4">
-                <svg class="w-8 h-8 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                    d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z">
-                  </path>
-                </svg>
-              </div>
-              <h3 class="text-lg sm:text-xl font-semibold mb-2">Telefone</h3>
-              <p class="text-teal-100 text-sm sm:text-base">(11) 9999-9999</p>
-              <p class="text-teal-100 text-sm sm:text-base">(11) 3333-3333</p>
+      <!-- Location Section -->
+      <section id="location" class="py-16 bg-white">
+        <div class="container mx-auto px-4">
+          <div class="max-w-4xl mx-auto">
+            <div class="text-center mb-8 scroll-element">
+              <h2 class="text-3xl md:text-4xl font-bold text-primary mb-4">
+                Encontre-nos
+              </h2>
+              <p class="text-gray-600 text-lg">
+                Venha nos visitar e conheça nossa clínica
+              </p>
             </div>
 
-            <div class="text-center scroll-element-scale delay-200">
-              <div class="bg-white/10 w-16 h-16 rounded-full flex items-center justify-center mx-auto mb-4">
-                <svg class="w-8 h-8 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                    d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z"></path>
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                    d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"></path>
-                </svg>
-              </div>
-              <h3 class="text-lg sm:text-xl font-semibold mb-2">Endereço</h3>
-              <p class="text-teal-100 text-sm sm:text-base">Alameda Shopping Empresarial</p>
-              <p class="text-teal-100 text-sm sm:text-base">Taguatinga Centro - DF</p>
-            </div>
+            <div class="bg-gradient-to-br from-primary/5 to-accent/5 rounded-2xl p-8 md:p-12 scroll-element-scale">
+              <div class="flex flex-col md:flex-row items-center justify-center gap-8">
+                <!-- Icon -->
+                <div class="flex-shrink-0">
+                  <div
+                    class="bg-gradient-to-br from-primary to-secondary w-20 h-20 rounded-full flex items-center justify-center shadow-lg">
+                    <svg class="w-10 h-10 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z"></path>
+                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"></path>
+                    </svg>
+                  </div>
+                </div>
 
-            <div class="text-center scroll-element-scale delay-300">
-              <div class="bg-white/10 w-16 h-16 rounded-full flex items-center justify-center mx-auto mb-4">
-                <svg class="w-8 h-8 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                    d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"></path>
-                </svg>
+                <!-- Address Info -->
+                <div class="text-center md:text-left">
+                  <h3 class="text-2xl font-bold text-primary mb-2">Alameda Shopping Empresarial</h3>
+                  <p class="text-gray-700 text-lg mb-4">Taguatinga Centro - Distrito Federal</p>
+                  <a href="https://maps.google.com/?q=Alameda+Shopping+Empresarial+Taguatinga+Centro+DF" target="_blank"
+                    rel="noopener noreferrer"
+                    class="inline-flex items-center text-primary hover:text-secondary font-semibold transition-colors duration-300">
+                    <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M9 20l-5.447-2.724A1 1 0 013 16.382V5.618a1 1 0 011.447-.894L9 7m0 13l6-3m-6 3V7m6 10l4.553 2.276A1 1 0 0021 18.382V7.618a1 1 0 00-.553-.894L15 4m0 13V4m0 0L9 7">
+                      </path>
+                    </svg>
+                    Ver no Google Maps
+                  </a>
+                </div>
               </div>
-              <h3 class="text-lg sm:text-xl font-semibold mb-2">Horário</h3>
-              <p class="text-teal-100 text-sm sm:text-base">Segunda à Sexta: 8h - 18h</p>
-              <p class="text-teal-100 text-sm sm:text-base">Sábado: 8h - 12h</p>
             </div>
-          </div>
-
-          <div class="text-center mt-8 sm:mt-12 scroll-element delay-400">
-            <a href="https://wa.me/5511999999999" target="_blank"
-              class="inline-flex items-center bg-green-500 hover:bg-green-600 text-white px-6 sm:px-8 py-3 sm:py-4 rounded-full text-base sm:text-lg transition-colors duration-300">
-              <svg class="w-5 h-5 sm:w-6 sm:h-6 mr-2" fill="currentColor" viewBox="0 0 24 24">
-                <path
-                  d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893A11.821 11.821 0 0020.885 3.488" />
-              </svg>
-              Agendar via WhatsApp
-            </a>
           </div>
         </div>
       </section>
